# XhuTimetable

./: .gitignore  PRIVACY.md  README.md  TODO.md  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  signing.gradle
.github/: FUNDING.yml
.github/workflows/: build.yml  build_android_nightly.yaml  build_commit.yaml  build_ios.yml  build_ios_nightly.yml  build_release.yml  build_test.yml  runner_test.yml  tag_clear.yaml  test.yml
app/: .gitignore  appcenter-post-build.sh  appcenter-post-clone.sh  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/bzip2/: bzip2.c  bzlib.c
app/src/main/res/drawable/: ic_academic_report.xml  ic_academic_report_night.xml  ic_account_settings.xml  ic_action_allow_upload_crash.xml  ic_action_clear_splash.xml  ic_action_custom_course.xml  ic_action_custom_thing.xml  ic_action_done.xml  ic_action_download.xml  ic_action_holiday.xml  ic_action_manage.xml  ic_action_more.xml  ic_action_night_mode.xml  ic_action_search.xml  (+76 more)
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: BuildVersionConfig.kt
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/jni/: CMakeLists.txt  bspatch.c
composeApp/src/androidMain/jni/bzip2/: blocksort.c  compress.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig.template
iosApp/iosApp/: ContentView.swift  Launch Screen.storyboard  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
(+739 files in other folders)
